--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/StupidCodeThief/Institution-map-#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.17",
     "request": "^2.88.2"
   },
