--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "4.1.1",
+    "react-google-login": "^5.1.21",
     "react-moment": "0.9.7",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
@@ -40,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
