--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
     "axios": "0.19.2",
+    "google-map-react": "^2.1.3",
     "moment": "2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,10 +18,12 @@
     "react-moment": "0.9.7",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "styled-components": "^5.1.1",
+    "use-places-autocomplete": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
