--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-google-login": "^5.1.21",
     "react-moment": "0.9.7",
     "react-redux": "7.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.3",
     "redux": "4.0.5",
