--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
     "antd": "^4.5.4",
     "axios": "0.19.2",
     "google-map-react": "^2.1.3",
+    "i18next": "^19.8.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "moment": "2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "4.1.1",
     "react-google-login": "^5.1.21",
+    "react-i18next": "^11.7.3",
     "react-moment": "0.9.7",
     "react-redux": "7.2.0",
     "react-router": "^5.2.0",
