--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.17",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "request": "^2.88.2"
