--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Institution map based on google api",
   "main": "server.js",
   "scripts": {
+    "build" : "concurrently \"npm run server\" \"npm run build --prefix client\"",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
