--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "InstitutionsMap",
   "version": "1.0.0",
   "description": "Institution map based on google api",
+  "engines": {
+    "node": "v14.2.0"
+  },
   "main": "server.js",
   "scripts": {
     "build" : "concurrently \"npm run server\" \"npm run build --prefix client\"",
