--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "main": "server.js",
   "scripts": {
-    "build" : "concurrently \"npm run server\" \"npm run build --prefix client\"",
+    "build": "concurrently \"npm run server\" \"npm run build --prefix client\"",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prifix client && mpm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=FALSE npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
