--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "node": "v14.2.0"
   },
   "main": "server.js",
+  "engines": {
+    "node": "14.2.0"
+  },
   "scripts": {
     "build": "concurrently \"npm run server\" \"npm run build --prefix client\"",
     "start": "node server.js",
