--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://fast-shore-40620.herokuapp.com"
 }
